src/objects/Employee_Job__c.object
<CustomObject>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employee Jobs</relationshipLabel>
        <relationshipName>Employee_Jobs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>This field on the Job object allows for a rather lengthy job
description input.</description>
        <label>Job Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Employee Jobs</relationshipLabel>
        <relationshipName>Employee_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This field on the Employee Job object allows for a user to
input the start date when the employee started this job.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field on the Employee Job object allows for a
TRUE/FALSE, 1/0 input.</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Employee Job</label>
    <nameField>
        <label>Employee Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>